--- a/chatBot/chatBot/chatBot.csproj
+++ b/chatBot/chatBot/chatBot.csproj
@@ -232,6 +232,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\VALERA.js" />
+    <Content Include="Scripts\VALERAUMENSHI.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
